--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=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
-HUGGINGFACEHUB_API_TOKEN=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
+OPENAI_API_KEY=
+HUGGINGFACEHUB_API_TOKEN=
